gccida/c1/gen_split_1214
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_split_1214/src/insn-emit.c:16664:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)v2, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_split_1214/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_split_1214/src/insn-emit.c:16664:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)v2, 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_split_1214/src/insn-emit.c:16665:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_split_1214/src/insn-emit.c:16665:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v2), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_split_1214/src/insn-emit.c:16674:18: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v11 = gen_rtx( ( rtx_code)v1, ( machine_mode)v2, v10, const_int_rtx[64]); 
                 ^~~~~~~~
                 rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_split_1214/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_split_1214/src/insn-emit.c:16674:27: error: expected ')'
v11 = gen_rtx( ( rtx_code)v1, ( machine_mode)v2, v10, const_int_rtx[64]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_split_1214/src/insn-emit.c:16674:14: note: to match this '('
v11 = gen_rtx( ( rtx_code)v1, ( machine_mode)v2, v10, const_int_rtx[64]); 
             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_split_1214/src/obj/insn-emit.o] Error 1
